force-app/main/default/objects/User/fields/Manager_Flag__c.field-meta.xml
<CustomField>
    <fullName>Manager_Flag__c</fullName>
    <formula>$User.Id =  ManagerId</formula>
    <label>Manager Flag</label>
    <type>Checkbox</type>
</CustomField>