force-app/main/default/objects/User/fields/Responsible_Territory__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Territory__c</fullName>
    <label>Responsible Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eastern - US</fullName>
            </value>
            <value>
                <fullName>Central - US</fullName>
            </value>
            <value>
                <fullName>Northeast - US</fullName>
            </value>
            <value>
                <fullName>Western - US</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>