force-app/main/default/objects/User/fields/User_Region__c.field-meta.xml
<CustomField>
    <fullName>User_Region__c</fullName>
    <formula>IF(CONTAINS(Profile.Name,&quot;NA&quot;), &quot;NA&quot;,
IF(CONTAINS(Profile.Name,&quot;EU&quot;), &quot;EU&quot;,
&quot;&quot;))</formula>
    <label>User Region</label>
    <type>Text</type>
</CustomField>