force-app/main/default/objects/User/fields/VAX_Code__c.field-meta.xml
<CustomField>
    <fullName>VAX_Code__c</fullName>
    <externalId>true</externalId>
    <label>VAX Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>